fix: Horizontal Scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -31,6 +31,7 @@ body {
 
 ::-webkit-scrollbar {
   width: 4px;
+  height: 4px;
 }
 ::-webkit-scrollbar-track {
   background: #eee;
